[gd_scene load_steps=2 format=2]

[ext_resource path="res://tela_inicial .gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 366.0
margin_top = 373.0
margin_right = 672.0
margin_bottom = 434.0
rect_pivot_offset = Vector2( 77, 29 )
text = "Clique aqui"

[node name="dado1" type="LineEdit" parent="."]
margin_left = 344.0
margin_top = 213.0
margin_right = 438.0
margin_bottom = 257.0

[node name="dado3" type="LineEdit" parent="."]
margin_left = 584.0
margin_top = 212.0
margin_right = 680.0
margin_bottom = 257.0

[node name="dado2" type="LineEdit" parent="."]
margin_left = 464.0
margin_top = 211.0
margin_right = 561.0
margin_bottom = 257.0

[node name="Label" type="Label" parent="."]
margin_left = 370.0
margin_top = 191.0
margin_right = 415.0
margin_bottom = 205.0
text = "Dado 1"

[node name="Label2" type="Label" parent="."]
margin_left = 615.0
margin_top = 188.0
margin_right = 660.0
margin_bottom = 202.0
text = "Dado 3"

[node name="Label3" type="Label" parent="."]
margin_left = 488.0
margin_top = 188.0
margin_right = 533.0
margin_bottom = 202.0
text = "Dado 2"

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 346.0
margin_top = 271.0
margin_right = 676.0
margin_bottom = 360.0

[node name="resposta" type="Label" parent="ColorRect"]
modulate = Color( 0.0117647, 0, 0, 1 )
self_modulate = Color( 0.00784314, 0, 0, 1 )
margin_left = 28.0
margin_top = 10.0
margin_right = 296.0
margin_bottom = 82.0

[node name="Button2" type="Button" parent="."]
margin_left = 283.0
margin_top = 454.0
margin_right = 410.0
margin_bottom = 518.0
text = "Exercício 2"

[node name="Button3" type="Button" parent="."]
margin_left = 440.0
margin_top = 453.0
margin_right = 570.0
margin_bottom = 518.0
text = "Exercício 3"

[node name="Button4" type="Button" parent="."]
margin_left = 599.0
margin_top = 453.0
margin_right = 729.0
margin_bottom = 517.0
text = "Exercício 4"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
